@@ -1,4 +1,3 @@
-<?xml version='1.0' encoding="UTF-8"?>
 <TBX dialect="TBX-Min">
     <header>
         <id>TBX sample</id>
